K8S/airplanes-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airplanes-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airplanes-service
  template:
    metadata:
      labels:
        app: airplanes-service
    spec:
      containers:
        - name: airplanes-service
          image: eyndrahena/airplanes-service:latest
---

apiVersion: v1
kind: Service
metadata:
  name: airplanes-clusterip-svc
spec:
  type: ClusterIP
  selector:
    app: airplanes-service
  ports:
    - name: airplanes-service
      protocol: TCP
      port: 80
      targetPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: airplanes-np-svc
spec:
  type: NodePort
  selector:
    app: airplanes-service
  ports:
    - name: airplanes-service
      protocol: TCP
      port: 80
      targetPort: 80
