K8S/rabbitmq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3.9.14-management-alpine
          ports:
            - containerPort: 15672
              name: rabbit-mgm-port
            - containerPort: 5672
              name: rabbit-msg-port

---

apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-cip
spec:
  type: ClusterIP
  selector:
    app: rabbitmq
  ports:
    - name: rabbit-mgm-port
      protocol: TCP
      port: 15672
      targetPort: 15672
    - name: rabbit-msg-port
      protocol: TCP
      port: 5672
      targetPort: 5672

---

apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
spec:
  type: LoadBalancer
  selector:
    app: rabbitmq
  ports:
    - name: rabbit-mgm-port
      protocol: TCP
      port: 15672
      targetPort: 15672
    - name: rabbit-msg-port
      protocol: TCP
      port: 5672
      targetPort: 5672
