K8S/ingress-svc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-svc
  annotations:
    kubernetes.io/ingress.class: nginx
    ngingx.ingress.io/use-regex: 'true'
spec:
  rules:
    - host: acme.com
      http:
        paths:
          - path: /api/airplanes
            pathType: Prefix
            backend:
              service:
                name: airplanes-clusterip-svc
                port:
                  number: 80
          - path: /api/manufacturers
            pathType: Prefix
            backend:
              service:
                name: airplanes-clusterip-svc
                port:
                  number: 80
