K8S/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: acme.com
      http:
        paths:
          - path: /api/m
            pathType: Prefix
            backend:
              service:
                name: management-cip
                port:
                  number: 80
          - path: /api/c
            pathType: Prefix
            backend:
              service:
                name: catalog-cip
                port:
                  number: 80
          - path: /api/b
            pathType: Prefix
            backend:
              service:
                name: booking-cip
                port:
                  number: 80
